--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,7 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
+          <li><a href="/popfigures/create">Create</a></li>
           <li><a href="/popfigures">View All My Pop Figures</a></li>
         </ul>
       </div>
