--- a/main_app/templates/popfigures/detail.html
+++ b/main_app/templates/popfigures/detail.html
@@ -6,6 +6,11 @@
 <div class="row">
   <div class="col s6">
     <div class="card">
+
+      <div class="card-image">
+        <img src={{ figure.image }} />
+      </div>
+
       <div class="card-content">
       <span class="card-title">{{ figure.character }}</span>
           <p>Franchise: {{ figure.franchise }}</p>
