--- a/main_app/templates/popfigures/index.html
+++ b/main_app/templates/popfigures/index.html
@@ -9,6 +9,9 @@
 
     <a href="/popfigures/{{ figure.id }}">
 
+      <div class="card-image">
+        <img src="{{ figure.image }}" />
+      </div>
       <div class="card-content">
         <span class="card-title">{{ figure.character }}</span>
         <p>Franchise: {{ figure.franchise }}</p>
