--- a/main_app/templates/popfigures/index.html
+++ b/main_app/templates/popfigures/index.html
@@ -8,19 +8,22 @@
   <div class="card">
 
     <a href="/popfigures/{{ figure.id }}">
+      <div class="card-align">
+        
+        <div class="card-image">
+          <img src="{{ figure.image }}" />
+        </div>
+        <div class="card-content">
+          <span class="card-title">{{ figure.character }}</span>
+          <p>Franchise: {{ figure.franchise }}</p>
+          <p>Category: {{ figure.category }}</p>
+          <!-- <p>Id: {{ figure.number }}</p> -->
 
-      <div class="card-image">
-        <img src="{{ figure.image }}" />
-      </div>
-      <div class="card-content">
-        <span class="card-title">{{ figure.character }}</span>
-        <p>Franchise: {{ figure.franchise }}</p>
-        <p>Category: {{ figure.category }}</p>
-        <!-- <p>Id: {{ figure.number }}</p> -->
+          {% if figure.feature != 'None' %}
+            <p>Feature: {{ figure.feature }}</p>
+          {% endif %}
+        </div>
 
-        {% if figure.feature != 'None' %}
-          <p>Feature: {{ figure.feature }}</p>
-        {% endif %}
       </div>
 
     </a>
